Update some stuff

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,6 @@
-asgirefd
-attrsd
-Djangod
-django-environd
-djangorestframeworkd
-djangorestframework_simplejwtd
-drf-spectaculard
-inflectiond
-jsonschemad
-jsonschema-specificationsd
-pillowd
-PyJWTd
-PyYAMLd
-referencingd
-rpds-pyd
-sqlparsed
-typing_extensionsd
-uritemplated
+django
+django-environ
+djangorestframework
+djangorestframework-simplejwt
+pillow
+drf-spectacular
